--- a/html5/부트스트랩/bootstrap.html
+++ b/html5/부트스트랩/bootstrap.html
@@ -6,7 +6,8 @@
     <title>부트스트랩 알아보기</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
-    <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.js">
+    </script>  
     <script src="js/bootstrap.js"></script>
     <style>
         .textarea{padding-top:50px;}
@@ -22,17 +23,24 @@
                 <span class="icon-bar"></span>
             </a>
             <a class="brand" href="#">Bootstrap</a>
-            <dis class="nav-collapse">
+            <div class="nav-collapse">
                 <ul class="nav">
-                    <li class="divider-vertical"><a href="#">HTML5</a></li>
-                    <li class="divider-vertical"><a href="#">CSS3</a></li>
-                    <li class="divider-vertical"><a href="#">ECMAScript</a></li>
+                    <li class="divider-vertical">
+                        <a href="#">HTML5</a>
+                    </li>
+                    <li class="divider-vertical">
+                        <a href="#">CSS3</a>
+                    </li>
+                    <li class="divider-vertical">
+                        <a href="#">ECMAScript</a>
+                    </li>
                 </ul>
-                <!-- click event -->
+                <!--click event-->
+
                 <ul class="nav pull-right">
                     <li><a href="#">Node.js</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <!--사용자가 만든 속성-->
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <span>API</span>
                             <b class="caret"></b>
                         </a>
@@ -55,7 +63,7 @@
                         </ul>
                     </li>
                 </ul>
-            </dis>
+            </div>
         </div>
     </div>
 </div> 
