--- a/jquery/11-속성선택자.html
+++ b/jquery/11-속성선택자.html
@@ -18,6 +18,10 @@
 
             //href 속성값에 google이 포함된 요소만 선택
             $('#wrap a[href*=google]').css({'color':'orange'});
+
+            //input type=text / password
+            $('#member_f input:text').css({'background-color':'#ff0'}); 
+            $('#member_f input:password').css({'background-color':'salmon'}); 
         });
     </script>
 </head>
